pkg/velaql/providers/query/testdata/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: vela-system
  annotations: 
    ports-mapping: "8000:80,8443:443"
spec:
  gatewayClassName: traefik
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: web
    port: 8000
    protocol: HTTP
