pkg/velaql/providers/query/testdata/gateway/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http-test-route
  namespace: default
spec:
  hostnames:
  - gateway.domain
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: vela-system
    sectionName: web
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: game2048
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
    - group: ""
      kind: Service
      name: game2048
      port: 80
      weight: 1
  - backendRefs:
    - group: ""
      kind: Service
      name: game2048-2
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /api
